--- a/frontend/css/cadUsuario.css
+++ b/frontend/css/cadUsuario.css
@@ -27,13 +27,14 @@ body {
 
 .header .logo img,
 .logo-img {
-    width: 130px;
+    width: 120px;
     cursor: pointer;
 }
 
 .nav a {
     color: #333;
     margin-left: 25px;
+     font-size: 1.2rem;
     text-decoration: none;
     font-weight: 600;
     transition: 0.3s ease;
